--- a/package.json
+++ b/package.json
@@ -37,18 +37,21 @@
   "dependencies": {
     "beefy": "^2.1.5",
     "chai": "^3.4.1",
-    "chai-as-promised": "^5.1.0",
+    "chai-as-promised": "^5.2.0",
     "chalk": "^1.1.1",
     "lodash.clone": "^3.0.3",
     "lodash.defaultsdeep": "^3.10.0",
     "npmlog": "^2.0.0",
-    "request": "^2.65.0",
+    "request": "^2.67.0",
     "sauce-connect-launcher": "^0.13.0",
     "sv-selenium": "^0.2.6",
-    "webdriverio": "^3.2.6"
+    "webdriverio": "^3.4.0"
   },
   "devDependencies": {
-    "standard": "^5.3.1",
+    "standard": "^5.4.1",
     "semantic-release": "^6.0.3"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
