--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "npmlog": "^2.0.0",
     "request": "^2.67.0",
     "sauce-connect-launcher": "^0.13.0",
+    "stream-splitter": "^0.3.2",
     "sv-selenium": "^0.2.6",
     "webdriverio": "^3.4.0"
   },
