--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "request": "^2.67.0",
     "sauce-connect-launcher": "^0.13.0",
     "stream-splitter": "^0.3.2",
-    "sv-selenium": "git://github.com/gr2m/sv-selenium#patch-1",
+    "sv-selenium": "^0.3.1",
     "webdriverio": "^3.4.0"
   },
   "devDependencies": {
